@@ -24,6 +24,7 @@ git-annex (8.20201130) UNRELEASED; urgency=medium
     include deletions of submodules.
     Thanks, Kyle Meyer for the patch.
   * Windows: Work around win32 length limits when dealing with lock files.
+  * Bug fix: export with -J could fail when two files had the same content.
 
  -- Joey Hess <id@joeyh.name>  Mon, 04 Jan 2021 12:52:41 -0400
 
